# SpectraVerse

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
data/: datamodule.py  dummy_dataset.py
data/loaders/: mzml_loader.py
models/: base.py
scripts/: train.py
tests/: test_loader.py  test_model.py
training/: trainer.py
